[package]
name          = "gitscanr"
version       = "0.2.0"
authors       = ["Ivan Torres Fally <bilbu@pm.me>"]
edition       = "2021"
description   = "A simple git repository explorer"
documentation = "https://github.com/bilbu/gitscanr"
readme        = "README.md"
homepage      = "https://github.com/bilbu/gitscanr"
repository    = "https://github.com/bilbu/gitscanr"
license       = "MIT"
keywords      = ["git", "scan"]
categories    = ["command-line-utilities", "filesystem"]
build         = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2    = "^0.14.4"
clap    = { version = "^3.2.1", features = ["derive", "cargo"] }
walkdir = "^2.3.2"
