[package]
name          = "gitscanr"
version       = "0.2.1"
authors       = ["Ivan Torres Fally <bilbu@pm.me>"]
edition       = "2021"
description   = "A simple git repository explorer"
documentation = "https://github.com/bilbu/gitscanr"
readme        = "README.md"
homepage      = "https://github.com/bilbu/gitscanr"
repository    = "https://github.com/bilbu/gitscanr"
license       = "MIT"
keywords      = ["git", "scan"]
categories    = ["command-line-utilities", "filesystem"]
build         = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2              = "^0.16.1"
clap              = { version = "^3.2.23", features = ["derive", "cargo"] }
walkdir           = "^2.3.3"
log               = "^0.4.17"
pretty_env_logger = "^0.4.0"
