[package]
name          = "gitscanr"
version       = "0.2.1"
authors       = ["Ivan Torres Fally <me@irtf.xyz>"]
edition       = "2021"
description   = "A simple git repository explorer"
documentation = "https://github.com/bilbu/gitscanr"
readme        = "README.md"
homepage      = "https://github.com/bilbu/gitscanr"
repository    = "https://github.com/bilbu/gitscanr"
license       = "MIT"
keywords      = ["git", "scan"]
categories    = ["command-line-utilities", "filesystem"]
build         = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2              = "^0.17.2"
clap              = { version = "^3.2.25", features = ["derive", "cargo"] }
walkdir           = "^2.3.3"
log               = "^0.4.17"
pretty_env_logger = "^0.5.0"
